* 0.10.6 (unreleased)
   * Fixed potential segfault with invalid semver strings
   * Fixed sign error when buying artifats in the Baron Prince mission (sorry)
   * Fixed behaviour of naev.trigger with parameters
   * Fixed Lua spfx volume changing with game speed
   * Fixed memory leak in luaspfx trails
   * Fixed typos

* 0.10.5
   * Start counting effect stacks from 1 not 2
   * Fixed launcher weapons using outfit mass instead of ammo mass
   * taiomi: fixed claim check for last mission
   * Fixed some typos
   * Fixed equipment of Lancelot in "Sharkman Is Back" mission
   * Fixed clicking on jump points also selecting planets in some cases
   * nelly02: Nelly now stops recommending stuff that only does a little disable
   * shadowvigil: Fixed mission not spawning escorts
   * flf_patrol: Missions should no longer be able to have ridiculously low credit rewards
   * Fixed some events not claiming systems that could interfere with other missions
   * hypergate_construction: should actually claim the system
   * Fixed some formatting in the alt text when hovering over outfits in the equipment window
   * ec06: refuel tanker should provide as much fuel as possible
   * taiomi09: fixed smugglers becoming hostile in some cases
   * Changed music.stop() API to stop music from continuing by default
   * Fixed potential memory issues on some platforms
   * Fixed crash when changing to Japanese language on Windows using Japanese locale

* 0.10.4
   * Fixed crashes related to multiple effects being active at once
   * Fixed multiple mission_done hooks not passing parameter correctly
   * Fixed plugin strings not being initialized with mismatched saves
   * ec06: made the final battle work much better

* 0.10.3
   * Fixed crash when using fits currently selected ship outfit filter
   * Fixed escorts always being set to aggressive when loading a save
   * Fixed Dvaered standing cap increase being lost after loading game