@@ -29,4 +29,7 @@
    <hide>1.000000</hide>
   </jump>
  </jumps>
+ <tags>
+  <tag>restricted</tag>
+ </tags>
 </ssys>
