@@ -4,6 +4,7 @@
    * Fixed behaviour of naev.trigger with parameters
    * Fixed Lua spfx volume changing with game speed
    * Fixed memory leak in luaspfx trails
+   * Fixed missions doing things in systems they should not
    * Fixed typos
 
 * 0.10.5
